--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,10 @@
 
   <name>assignment</name>
   <url>http://maven.apache.org</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -20,9 +21,7 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
-    
-    
+    </dependency> 
   </dependencies>
   <build>
   	<plugins>
